<resources>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="app_name">Aiva CRM</string>
    <string name="google_client_id">748734039678-5ur49jj50aiugu2stk4u2vrad446lbdq.apps.googleusercontent.com</string>
    <string name="day1">Monday</string>
    <string name="day2">Tuesday</string>
    <string name="day3">Wednesday</string>
    <string name="day4">Thursday</string>
    <string name="day5">Friday</string>
    <string name="day6">Saturday</string>
    <string name="day7">Sunday</string>
    <string name="title_activity_task_info">TaskInfo</string>
    <string name="sample_paragraph">Components with responsive elevations may encounter other components as they move between their resting elevations and dynamic elevation offsets. Because material cannot pass</string>
    <string name="action_settings">Settings</string>
    <string name="customer">Customer</string>
    <string name="action">Action</string>
    <string name="order">Order</string>
    <string name="due_date">Due date</string>
    <string name="status">Status</string>
    <string name="task">Task</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="website">Website</string>
    <string name="comment">Comment</string>
    <string name="subject">Name Surname</string>
    <string name="EDIT">EDIT</string>
    <string name="CANCEL">CANCEL</string>
    <string name="YES">YES</string>
    <string name="NO">NO</string>
    <string name="select_action">select</string>
    <string name="new_task">New Task</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="enter_comment">Enter Comment</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="sign_out">Sign Out</string>
    <string name="all_tasks">All Tasks</string>
    <string name="completed">Completed</string>
    <string name="not_completed">Not completed</string>
    <string name="welcome_message">Welcome to Aiva CRM</string>
    <string name="login_prompt">Enter your AIVA9001 login credentials</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">S I G N  I N</string>
    <string name="order_title">Order</string>
    <string name="street">Street</string>
    <string name="house">House</string>
    <string name="post_index">Post Index</string>
    <string name="city">City</string>
    <string name="country_code">Country Code</string>
    <string name="client">Client</string>
    <string name="sample_comment">Sample Comment</string>
    <string name="colon">:</string>
    <string name="language_switch">Switch Language</string>
    <string name="large_text">Large Text</string>
    <string name="action_show_all">Show All Tasks</string>
    <string name="action_show_completed">Show Completed Tasks</string>
    <string name="action_show_pending">Show Pending Tasks</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_language_switch">Switch Language</string>
    <string name="action_connect_google">Connect Google Account</string>
    <string name="action_disconnect_google">Disconnect Google Account</string>
    <string name="action_sync_calendar">Sync Calendar</string>
    <string name="google_account_connected">Google Account Connected</string>
    <string name="google_account_disconnected">Google Account Disconnected</string>
    <string name="failed_to_connect_google_account">Failed to connect Google Account</string>
    <string name="fetch_failed_google_calendar">Failed to fetch events from Google Calendar</string>
    <string name="connect_google_first">Please connect a Google Account first</string>
    <string name="you_have_an_upcoming_event">You have an upcoming event</string>
    <string name="channel_name">Event Notifications</string>
    <string name="channel_description">Notifications for upcoming events</string>
    <string name="filter_by_assignment">Filter by Assignment</string>
    <string name="filter_by_status">Filter by Status</string>
    <string name="representative">Representative</string>
    <string name="assigned_to_employee_name">Assigned to:</string>
    <string name="invitation_subject">Invitation: %1$s</string>
    <string name="invitation_body">Please find the attached invitation to %1$s. Open it in Google Calendar.\n\nComment: %2$s</string>
    <string name="send_email_using">Send email using:</string>
    <string name="invite_send_failure">Failed to send invite.</string>
    <string name="no_rep_email_available">Representative email is not available.</string>
    <string name="add_to_calendar">Add to my Google Calendar</string>
    <string name="send_invite">Send invite to representative</string>
    <string name="reassign_task">REASSIGN TASK</string>
    <string name="reassign_confirmation_message">Do you want to reassign this task?</string>
    <string name="select_employee">Select Employee</string>
    <string name="unknown_organizer">Unknown Organizer</string>
    <string name="unassigned">Unassigned</string>
    <string name="phone_number_not_assigned">Phone number is not assigned</string>
    <string name="send_email">Send Email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_login_again">Please login again.</string>
    <string name="task_reassigned_successfully">Task reassigned successfully</string>
    <string name="failed_to_reassign_task">Failed to reassign task</string>
    <string name="failed_to_get_employees">Failed to get employees</string>
    <string name="network_error">Network error: </string>
    <string name="delete_task">Delete Task</string>
    <string name="delete_task_confirmation">Are you sure you want to delete this task?</string>
    <string name="task_deleted_successfully">Task deleted successfully</string>
    <string name="failed_to_delete_task">Failed to delete task</string>
    <string name="google_calendar_not_available">Google Calendar service is not available.</string>
    <string name="failed_to_add_event_to_google_calendar">Failed to add event to Google Calendar.</string>
    <string name="failed_to_parse_date_and_time">Failed to parse date and time.</string>
    <string name="edit_confirmation_title">Edit?</string>
    <string name="create_new_task">Create new task?</string>
    <string name="create_same_task_confirmation">Do you want to create the same task for the selected client?</string>
    <string name="task_type_1">Task Type 1</string>
    <string name="task_type_2">Task Type 2</string>
    <string name="task_type_3">Task Type 3</string>
    <string name="select_task_type">Select Task Type</string>
    <string name="task_status_updated">Task status updated</string>
    <string name="failed_to_update_task_status">Failed to update task status</string>
    <string name="complete_task_confirmation">Complete the task?</string>
    <string name="mark_task_not_completed_confirmation">Mark the task as not completed?</string>
    <string name="failed_to_create_new_task">Failed to create new task</string>
    <string name="assigned_to">Assigned to: %1$s</string>
    <string name="unknown">Unknown</string>
    <string name="event_added_to_google_calendar">Event added to Google Calendar</string>
    <string name="add_comment">Add Comment</string>
    <string name="optional_comment">Optional Comment</string>
    <string name="event_not_found">Event not found in Google Calendar.</string>
    <string name="event_deleted">Event deleted from Google Calendar.</string>
    <string name="event_delete_failed">Failed to delete event.</string>
    <string name="client_manager_name">Client Manager</string>
    <string name="separator_colon">:</string>
    <string name="due_date_icon">Due date icon</string>
    <string name="status_icon">status icon</string>
    <string name="mark_as_completed">MARK AS COMPLETED</string>
    <string name="mark_as_uncompleted">MARK AS NOT COMPLETED</string>
    <string name="status_completed_icon">status completed icon</string>
    <string name="status_not_completed_icon">status not completed icon</string>
    <string name="spinner_arrow_description">spinner arrow</string>
    <string name="toggle_contact_info">toggle contact info</string>
    <string name="contact_info">Contact info</string>
    <string name="save_task">Save Task</string>
    <string name="representative_info">Representative Information</string>
    <string name="rep_name">Representative Name</string>
    <string name="rep_email">Representative Email</string>
    <string name="rep_phone">Representative Phone</string>
    <string name="edit_representative_info">Edit Representative Information</string>
    <string name="order_info">ORDER INFO </string>
    <string name="reschedule">RESCHEDULE</string>
    <string name="sync_with_g_calendar">Sync with Google Calendar</string>
    <string name="rep_status_default"></string>
    <string name="contact_person_type_1000"><u>For Marketing</u></string>
    <string name="contact_person_type_0100"><u>CEO</u></string>
    <string name="contact_person_type_0010"><u>&lt;Rep&gt;</u></string>
    <string name="contact_person_type_0001"><u>Main</u></string>
    <string name="contact_person_type_1100"><u>CEO | For Marketing</u></string>
    <string name="contact_person_type_1010"><u>&lt;Rep&gt; | For Marketing</u></string>
    <string name="contact_person_type_1001"><u>Main | For Marketing</u></string>
    <string name="contact_person_type_0110"><u>&lt;Rep&gt; | CEO</u></string>
    <string name="contact_person_type_0101"><u>CEO | Main</u></string>
    <string name="contact_person_type_0011"><u>&lt;Rep&gt; | Main</u></string>
    <string name="contact_person_type_1110"><u>&lt;Rep&gt; | CEO | For Marketing</u></string>
    <string name="contact_person_type_1101"><u>CEO | Main | For Marketing</u></string>
    <string name="contact_person_type_1011"><u>&lt;Rep&gt; | Main | For Marketing</u></string>
    <string name="contact_person_type_0111"><u>&lt;Rep&gt; | CEO | Main</u></string>
    <string name="contact_person_type_1111"><u>&lt;Rep&gt; | CEO | Main | For Marketing</u></string>
    <string name="marker_atstovas">&lt;Rep&gt;</string>
    <string name="action_prompt">Select Action</string>
    <string name="send_invite_to_representative">Send email invite to representative</string>
    <string name="select_representative">Select Representative</string>
    <string name="error_select_action">Please select a valid action</string>
    <string name="error_select_date">Please select a date</string>
    <string name="error_select_time">Please select a time</string>
    <string name="error_select_representative">Please select a representative</string>
    <string name="add_to_calendar_description">Checkbox to add task to calendar</string>
    <string name="send_invite_description">Checkbox to send invite to representative</string>
    <string name="confirm_task_creation_title">Confirm Task Creation</string>
    <string name="confirm_task_creation_message">Are you sure you want to create this task?</string>
    <string name="new_task_created">New Task Created</string>
    <string name="error_email_empty">Representative email not found</string>
    <string name="error_address_empty">Address not assigned</string>
    <string name="invalid_date_format">Invalid date format. Please enter date as yyyy-MM-dd HH:mm.</string>
    <string name="no_task_details_found">No task details found under the specified header ID.</string>
    <string name="no_data_found_in_response">No data found in response.</string>
    <string name="today">Today</string>
    <string name="status_filter">Status Filter</string>
    <string name="assignment_filter">Assignment Filter</string>
</resources>