<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/street" />

    <EditText
        android:id="@+id/edit_house"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/house" />

    <EditText
        android:id="@+id/edit_post_index"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/post_index" />

    <EditText
        android:id="@+id/edit_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/city" />

    <EditText
        android:id="@+id/edit_country_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/country_code" />

</LinearLayout>
